# deilabs-bot

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: pylint.yml  python-app.yml
src/deilabs_bot/: __init__.py  bot.py  cli.py  client.py  config.py  db.py  file_upload.py  labs.py  logger.py  paths.py  prefs.py  selectors.py  web.py
tests/: test_bot_async.py  test_bot_helpers.py  test_client_helpers.py  test_db.py  test_logger.py  test_prefs.py  test_web.py
