[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "deilabs-bot"
version = "0.1.0"
description = "Automated DeiLabs presence logging (CLI + Telegram bot)"
authors = [{name="Aidin Attar"}]
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    "Flask>=3.0",
    "playwright",
    "python-telegram-bot[job-queue]>=21.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
deilabs = "deilabs_bot.cli:main"
deilabs-web = "deilabs_bot.web:main"
